<resources>
    <string name="app_name">Submission 2</string>
    <string name="overview">Overview</string>
    <string name="user_score">User Score :</string>
    <string name="runtime">Runtime :</string>
    <string name="change_language_setting">Language Configuration</string>
    <string name="moviedetail">Movie Detail</string>
    <string name="tvshowdetail">TV Show Detail</string>
    <string name="movietab">Movie</string>
    <string name="tvshowtab">TV Show</string>
    <string name="genre">Genre :</string>
    <string name="poster_image">poster image</string>
    <string name="time_image">time image</string>
    <string name="star_image">Start Image</string>
    <string-array name="data_movie_title">
        <item>Overlord</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Bohemian Rhapsody</item>
        <item>Creed II</item>
        <item>How To Train Your Dragon</item>
        <item>Glass</item>
        <item>Avenger: Infinity War</item>
        <item>Alita Battle Angel</item>
        <item>Aquaman</item>
        <item>A Star Is Born</item>
        <item>Ralph Breaks The Internet</item>
    </string-array>
    <string-array name="data_movie_poster">
        <item>@drawable/poster_overlord</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_how_to_train</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_infinity_war</item>
        <item>@drawable/poster_alita</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_a_start_is_born</item>
        <item>@drawable/poster_ralph</item>
    </string-array>
    <string-array name="data_movie_release">
        <item>November 1, 2018</item>
        <item>December 6, 2018</item>
        <item>October 24, 2018</item>
        <item>November 21, 2018</item>
        <item>January 3, 2019</item>
        <item>January 16, 2019</item>
        <item>April 25, 2018</item>
        <item>January 31, 2019</item>
        <item>December 7, 2018</item>
        <item>October 3, 2018</item>
        <item>November 20, 2018</item>
    </string-array>
    <string-array name="data_movie_showtime">
        <item>1h 50m</item>
        <item>1h 57m</item>
        <item>2h 15m</item>
        <item>2h 10m</item>
        <item>1h 44m</item>
        <item>2h 9m</item>
        <item>2h 29m</item>
        <item>2h 2m</item>
        <item>2h 24m</item>
        <item>2h 15m</item>
        <item>1h 52m</item>
    </string-array>
    <string-array name="data_movie_rating">
        <item>66%</item>
        <item>84%</item>
        <item>81%</item>
        <item>67%</item>
        <item>76%</item>
        <item>65%</item>
        <item>83%</item>
        <item>67%</item>
        <item>68%</item>
        <item>75%</item>
        <item>72%</item>
    </string-array>
    <string-array name="data_movie_genre">
        <item>Horror, War, Science Fiction</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>Drama, Music</item>
        <item>Drama</item>
        <item>Animation, Family, Adventure</item>
        <item>Thriller, Mystery, Drama</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Action, Science Fiction, Thriller, Adventure</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Drama , Romance, Music</item>
        <item>Family, Animation, Comedy, Adventure</item>
    </string-array>
    <string-array name="data_movie_overview">
        <item>France, June 1944. On the eve of D-Day, some American paratroopers fall behind enemy lines after their aircraft crashes while on a mission to destroy a radio tower in a small village near the beaches of Normandy. After reaching their target, the surviving paratroopers realise that, in addition to fighting the Nazi troops that patrol the village, they also must fight against something else.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson \"Kingpin\" Fisk uses a \t\t\tsuper collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by \t\t\t\tstorm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly \t\t\t\twild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the \t\t\tband together amid the success and excess.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccups reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new \t\t\tdanger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity \t\t\tStones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have \t\t\tfought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm.  With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the World Wide Web in search of a replacement part to save Vanellopes video game, Sugar Rush. In way over their heads, Ralph and Vanellope rely on the citizens of the internet the netizens to help navigate their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of trend-making site BuzzzTube.</item>
    </string-array>
    <string-array name="data_tvshow_title">
        <item>NCIS</item>
        <item>Shameless</item>
        <item>Greys Anatomy</item>
        <item>Naruto Shippuden</item>
        <item>Doom Patrol</item>
        <item>Family Guy</item>
        <item>Dragonball</item>
        <item>Fairytail</item>
        <item>The Flash</item>
        <item>Hanna</item>
        <item>Arrow</item>
    </string-array>
    <string-array name="data_tvshow_poster">
        <item>@drawable/poster_ncis</item>
        <item>@drawable/poster_shameless</item>
        <item>@drawable/poster_grey_anatomy</item>
        <item>@drawable/poster_naruto_shipudden</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_family_guy</item>
        <item>@drawable/poster_dragon_ball</item>
        <item>@drawable/poster_fairytail</item>
        <item>@drawable/poster_flash</item>
        <item>@drawable/poster_hanna</item>
        <item>@drawable/poster_arrow</item>
    </string-array>
    <string-array name="data_tvshow_release">
        <item>September 23, 2003</item>
        <item>January 9, 2011</item>
        <item>March 28, 2019</item>
        <item>February 15, 2007</item>
        <item>February 15, 2019</item>
        <item>January 31, 1999</item>
        <item>February 26, 1986</item>
        <item>October 12, 2009</item>
        <item>October 7, 2014</item>
        <item>March 28, 2019</item>
        <item>October 10, 2012</item>
    </string-array>
    <string-array name="data_tvshow_runtime">
        <item>45m</item>
        <item>60m, 55m</item>
        <item>43m</item>
        <item>22m</item>
        <item>60m</item>
        <item>22m</item>
        <item>25m</item>
        <item>25m</item>
        <item>44m</item>
        <item>50m</item>
        <item>42m</item>
    </string-array>
    <string-array name="data_tvshow_userscore">
        <item>67%</item>
        <item>78%</item>
        <item>63%</item>
        <item>75%</item>
        <item>61%</item>
        <item>65%</item>
        <item>71%</item>
        <item>64%</item>
        <item>67%</item>
        <item>64%</item>
        <item>58%</item>
    </string-array>
    <string-array name="data_tvshow_genre">
        <item>Action, Adventure, Crime, Drama</item>
        <item>Drama, Comedy</item>
        <item>Drama</item>
        <item>Animation, Comedy, Drama</item>
        <item>Sci-Fi, Fantasy, Action, Adventure</item>
        <item>Animation, Comedy</item>
        <item>Comedy, Sci-Fi, Fantasy, Animation, Action, Adventure</item>
        <item>Action ,Adventure, Animation, Comedy, Aci-Fi, Fantasy</item>
        <item>Drama, Sci-Fi, Fantasy</item>
        <item>Action, Adventure, Drama</item>
        <item>Crime, Drama, Mystery, Action, Adventure</item>
    </string-array>
</resources>