<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_cardview"
    android:layout_gravity="center"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/poster_image"
            tools:src="@color/colorAccent"/>

        <TextView
            android:id="@+id/txt_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_movie"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Movie Title"/>

        <TextView
            android:id="@+id/txt_movie_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_movie_title"
            android:layout_toEndOf="@+id/img_movie"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="14sp"
            android:textStyle="italic"
            tools:text="December 6, 2018"/>

        <TableLayout
            android:id="@+id/detail_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_movie"
            android:layout_below="@+id/txt_movie_release"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:contentDescription="@string/star_image"
                    android:src="@drawable/baseline_star_24" />
                <TextView
                    android:id="@+id/txt_movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="-8dp"
                    tools:text="90%"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:contentDescription="@string/time_image"
                    android:src="@drawable/baseline_access_time_24" />
                <TextView
                    android:id="@+id/txt_movie_showtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="-8dp"
                    tools:text="1h58m"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>